# rapier-debug

./: Cargo.toml
examples/: ball2d.rs  ball3d.rs  box2d.rs  box3d.rs  capsule2d.rs  capsule3d.rs  cone3d.rs  cylinder3d.rs
examples/common/: environment2d.rs  environment3d.rs  mod.rs
src/: collider.rs  lib.rs  mesh_attributes.rs  plugin.rs  wireframe2d_pipeline.rs  wireframe_pipeline.rs
src/mesh/: ball.rs  capsule.rs  cone.rs  cuboid.rs  cylinder.rs  mod.rs  trimesh.rs
src/mesh2d/: ball.rs  capsule.rs  cuboid.rs  mod.rs  trimesh.rs
src/shaders/: wireframe.wgsl  wireframe2d.wgsl
src/systems/: extract_wireframes.rs  mod.rs  queue_wireframes.rs  spawn_colliders.rs
